Coverity analysis defect 122018: Missing break in switch

XMLWordPrintableJSON

    • Fully Compatible
    • ALL
    • QE 2022-04-18
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Missing break in switch

      Execution falls through to the next case statement or default; this might indicate a common typo. Missing break statement between cases in switch statement
      /src/mongo/db/exec/sbe/vm/vm.cpp:1790: MISSING_BREAK 122018 The case for value "(mongo::sbe::value::TypeTags)27" is not terminated by a "break" statement.
      /src/mongo/db/exec/sbe/vm/vm.cpp:1795: MISSING_BREAK 122018 The above case falls through to this one.

            Assignee:
            Rui Liu (Inactive)
            Reporter:
            Coverity Collector User
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: