SERVER-65206 Fix switch case fall through